Add support of OpenJDK 19 for JVM benchmarks